# rules_bosh

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  buildjob.go  buildpkg.go  buildrel.go
bosh/: BUILD.bazel  buildjob.go  buildpkg.go  buildrel.go  def.bzl
bosh/internal/buildtar/: BUILD.bazel  build.go
internal/buildtar/: build.go
